# eblang

./: .clang-format  CMakeLists.txt  README.md
example_programs/: bash.eblang  calculator.eblang  sum.eblang
lib/: CMakeLists.txt
lib/src/eblang/: context.h  expression.cpp  expression.h  function.h  lexer.cpp  lexer.h  parser.cpp  parser.h  state.cpp  state.h  stdlib.cpp  stdlib.h  token.h  util.h  value.cpp  value.h
lib/src/eblang/token/: any_token.h
lib/test/: EblangTest.cpp  LexerTest.cpp
src/: main.cpp
